--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,17 @@
     padding: 0;
 }
 
+header{
+    height: 120px;
+}
+
+footer{
+    height: 40px;
+}
+
 header,
 footer {
     width: 100%;
-    height: 120px;
     background-color: blue;
     color: white;
 }
